--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
   </head>
   <body>
     <div class="navbar">
-        <div class="navbar__logo">
-            <a href="/">
-                <img src="/src/assets/logos/circle.svg" alt="Circle">
-            </a>
-        </div>
-        <nav class="navbar__menu">
-            <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="#projects">Projects</a>
-                </li>
-                <li>
-                    <a href="#services">Services</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="navbar__contact">
-            <a href="/contact.html" class="btn btn--primary">Contact us</a>
+        <div class="navbar__container">
+            <div class="navbar__logo">
+                <a href="/">
+                    <img src="/src/assets/logos/circle.svg" alt="Circle">
+                </a>
+            </div>
+            <nav class="navbar__menu">
+                <ul>
+                    <li>
+                        <a href="/" class="active">Home</a>
+                    </li>
+                    <li>
+                        <a href="#projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#services">Services</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="navbar__contact">
+                <a href="/contact.html" class="btn btn--primary">Contact us</a>
+            </div>
         </div>
     </div>
     <header class="header">
