header home finished

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
             </div>
         </div>
     </div>
-    <header class="header">
-        <div class="header__text-section">
-            <h1>Empower Your Business With Stunning Design!</h1>
-            <p>Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
-            <div class="text-section__btns">
-                <a href="/contact.html" class="btn btn--primary">Get in touch</a>
-                <a href="#projects" class="btn">See our work</a>
-            </div>
-        </div>
-        <div class="header__hero-section">
-            <img src="/src/assets/hero-section/hero-image.png" alt="Man smiling">
-            <img src="/src/assets/hero-section/card-1.png" alt="Choose tour card">
-            <img src="/src/assets/hero-section/card-2.png" alt="Project has been accepted">
-        </div>
-    </header>
     <div class="container">
+        <header class="header-home">
+            <div class="header-home__hero-section">
+                <img class="hero-section__main-img" src="/src/assets/hero-section/hero-image.png" alt="Man smiling">
+                <img class="hero-section__card hero-section__card1" src="/src/assets/hero-section/card-1.png" alt="Choose tour card">
+                <img class="hero-section__card hero-section__card2" src="/src/assets/hero-section/card-2.png" alt="Project has been accepted">
+            </div>
+            <div class="header-home__text-section">
+                <h1>Empower Your Business With Stunning Design!</h1>
+                <p>Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
+                <div class="text-section__btns">
+                    <a href="/contact.html" class="btn btn--primary">Get in touch</a>
+                    <a href="#projects" class="btn">See our work</a>
+                </div>
+            </div>
+        </header>
         <section class="logos">
             <img src="/src/assets/logos/airbnb-logo.svg" alt="Airbnb">
             <img src="/src/assets/logos/google-logo.svg" alt="Google">
