projects home finished

--- a/index.html
+++ b/index.html
@@ -56,28 +56,31 @@
             <img src="/src/assets/logos/amazon-logo.svg" alt="Amazon">
         </section>
         <section id="projects" class="projects">
-            <div class="project-card">
-                <img class="project-card__img" src="/src/assets/projects-section/1.jpg" alt="Simplify">
-                <div class="project-card__container">
-                    <h3 class="project-card__title">Simplify</h3>
-                    <p class="project-card__text">UI Design & App Development</p>
-                    <a href="/simplify.html" class="project-card__link">Learn more</a>
+            <h2>Recent <span class="br-text">Projects</span></h2>
+            <div class="projects__container">
+                <div class="project-card">
+                    <img class="project-card__img" src="/src/assets/projects-section/1.jpg" alt="Simplify">
+                    <div class="project-card__container">
+                        <h3 class="project-card__title">Simplify</h3>
+                        <p class="project-card__text">UI Design & App Development</p>
+                        <a href="/simplify.html" class="project-card__link">Learn more</a>
+                    </div>
                 </div>
-            </div>
-            <div class="project__card">
-                <img class="project-card__img" src="/src/assets/projects-section/2.jpg" alt="Dashcoin">
-                <div class="project-card__container">
-                    <h3 class="project-card__title">Dashcoin</h3>
-                    <p class="project-card__text">Web Development</p>
-                    <a href="#" class="project-card__link">Learn more</a>
+                <div class="project-card">
+                    <img class="project-card__img" src="/src/assets/projects-section/2.jpg" alt="Dashcoin">
+                    <div class="project-card__container">
+                        <h3 class="project-card__title">Dashcoin</h3>
+                        <p class="project-card__text">Web Development</p>
+                        <a href="#" class="project-card__link">Learn more</a>
+                    </div>
                 </div>
-            </div>
-            <div class="project__card">
-                <img class="project-card__img" src="/src/assets/projects-section/3.jpg" alt="Vectorify">
-                <div class="project-card__container">
-                    <h3 class="project-card__title">Vectorify</h3>
-                    <p class="project-card__text">User Experience Design</p>
-                    <a href="#" class="project-card__link">Learn more</a>
+                <div class="project-card">
+                    <img class="project-card__img" src="/src/assets/projects-section/3.jpg" alt="Vectorify">
+                    <div class="project-card__container">
+                        <h3 class="project-card__title">Vectorify</h3>
+                        <p class="project-card__text">User Experience Design</p>
+                        <a href="#" class="project-card__link">Learn more</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -90,23 +93,26 @@
     </section>
     <div class="container">
         <section id="services" class="services">
-            <div class="service-card">
-                <img class="service-card__icon" src="/src/assets/services-section/icons/1.svg" alt="User Interface Design">
-                <h3 class="service-card__title">User Interface Design</h3>
-                <p class="service-card__text">Circle provides you with a stunning user interface design that is accessible to everyone.</p>
-                <a href="#" class="service-card__link">Learn more</a>
-            </div>
-            <div class="service-card">
-                <img class="service-card__icon" src="/src/assets/services-section/icons/2.svg" alt="User Experience Design">
-                <h3 class="service-card__title">User Experience Design</h3>
-                <p class="service-card__text">Circle always focuses on delivering the best user experience to your customers.</p>
-                <a href="#" class="service-card__link">Learn more</a>
-            </div>
-            <div class="service-card">
-                <img class="service-card__icon" src="/src/assets/services-section/icons/3.svg" alt="Application Development">
-                <h3 class="service-card__title">Application Development</h3>
-                <p class="service-card__text">We develop high-quality mobile and web applications using the latest technology stack.</p>
-                <a href="#" class="service-card__link">Learn more</a>
+            <h2>Our <span class="br-text">Services</span></h2>
+            <div class="services__conteiner">
+                <div class="service-card">
+                    <img class="service-card__icon" src="/src/assets/services-section/icons/1.svg" alt="User Interface Design">
+                    <h3 class="service-card__title">User Interface Design</h3>
+                    <p class="service-card__text">Circle provides you with a stunning user interface design that is accessible to everyone.</p>
+                    <a href="#" class="service-card__link">Learn more</a>
+                </div>
+                <div class="service-card">
+                    <img class="service-card__icon" src="/src/assets/services-section/icons/2.svg" alt="User Experience Design">
+                    <h3 class="service-card__title">User Experience Design</h3>
+                    <p class="service-card__text">Circle always focuses on delivering the best user experience to your customers.</p>
+                    <a href="#" class="service-card__link">Learn more</a>
+                </div>
+                <div class="service-card">
+                    <img class="service-card__icon" src="/src/assets/services-section/icons/3.svg" alt="Application Development">
+                    <h3 class="service-card__title">Application Development</h3>
+                    <p class="service-card__text">We develop high-quality mobile and web applications using the latest technology stack.</p>
+                    <a href="#" class="service-card__link">Learn more</a>
+                </div>
             </div>
         </section>
     </div>
