newsletter component finished

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         <h2 class="newsletter__title">Do you have any questions?</h2>
         <p class="newsletter__text">Let us help you!</p>
         <form action="" class="newsletter__form">
-            <input type="email" placeholder="Enter your email">
-            <button type="submit">Subscribe</button>
+            <input type="email" placeholder="Enter your email" required>
+            <button type="submit" class="btn btn--primary">Subscribe</button>
         </form>
     </section>
     <footer class="footer">
