--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Circle - Empower Your Business With Stunning Design!</title>
+    <link rel="icon" type="image/x-icon" href="/src/assets/logos/favicon.ico" />
     <link rel="stylesheet" href="/src/css/style.css"></link>
   </head>
   <body>
