testimonial home finished

--- a/index.html
+++ b/index.html
@@ -87,10 +87,19 @@
         </section>
     </div>
     <section class="testimonial">
-        <img src="/src/assets/testimonial-section/memoji-1.png" alt="Memoji 1" class="testimonial__memoji memoji__top-left">
-        <img src="/src/assets/testimonial-section/memoji-1.png" alt="Memoji 2" class="testimonial__memoji memoji__top-right">
-        <img src="/src/assets/testimonial-section/memoji-1.png" alt="Memoji 3" class="testimonial__memoji memoji__bottom-left">
-        <img src="/src/assets/testimonial-section/memoji-1.png" alt="Memoji 4" class="testimonial__memoji memoji__bottom-right">
+        <div class="testimonial__container">
+            <img src="/src/assets/testimonial-section/memoji-1.png" alt="Memoji 1" class="testimonial__memoji memoji__top memoji__left">
+            <img src="/src/assets/testimonial-section/memoji-2.png" alt="Memoji 2" class="testimonial__memoji memoji__top memoji__right">
+            <h2 class="testimonial__title">Hear What Our Clients Have to Say</h2>
+            <p class="testimonial__text">"Circle helped us through every stage of our startup. We really enjoyed working with you."</p>
+            <div class="testimonial__client-block">
+                <img src="/src/assets/testimonial-section/profile.png" alt="" class="client-block__img">
+                <p class="client-block__name">Kristin Watson</p>
+                <p class="client-block__company">Booking.com</p>
+            </div>
+            <img src="/src/assets/testimonial-section/memoji-3.png" alt="Memoji 3" class="testimonial__memoji memoji__bottom memoji__left">
+            <img src="/src/assets/testimonial-section/memoji-4.png" alt="Memoji 4" class="testimonial__memoji memoji__bottom memoji__right">
+        </div>
     </section>
     <div class="container">
         <section id="services" class="services">
