services home finished

--- a/index.html
+++ b/index.html
@@ -104,21 +104,27 @@
     <div class="container">
         <section id="services" class="services">
             <h2>Our <span class="br-text">Services</span></h2>
-            <div class="services__conteiner">
+            <div class="services__container">
                 <div class="service-card">
-                    <img class="service-card__icon" src="/src/assets/services-section/icons/1.svg" alt="User Interface Design">
+                    <div class="service-card__icon-block">
+                        <img class="service-card__icon" src="/src/assets/services-section/icons/1.svg" alt="User Interface Design">
+                    </div>
                     <h3 class="service-card__title">User Interface Design</h3>
                     <p class="service-card__text">Circle provides you with a stunning user interface design that is accessible to everyone.</p>
                     <a href="#" class="service-card__link">Learn more</a>
                 </div>
                 <div class="service-card">
-                    <img class="service-card__icon" src="/src/assets/services-section/icons/2.svg" alt="User Experience Design">
+                    <div class="service-card__icon-block">
+                        <img class="service-card__icon" src="/src/assets/services-section/icons/2.svg" alt="User Experience Design">
+                    </div>
                     <h3 class="service-card__title">User Experience Design</h3>
                     <p class="service-card__text">Circle always focuses on delivering the best user experience to your customers.</p>
                     <a href="#" class="service-card__link">Learn more</a>
                 </div>
                 <div class="service-card">
-                    <img class="service-card__icon" src="/src/assets/services-section/icons/3.svg" alt="Application Development">
+                    <div class="service-card__icon-block">
+                        <img class="service-card__icon" src="/src/assets/services-section/icons/3.svg" alt="Application Development">
+                    </div>
                     <h3 class="service-card__title">Application Development</h3>
                     <p class="service-card__text">We develop high-quality mobile and web applications using the latest technology stack.</p>
                     <a href="#" class="service-card__link">Learn more</a>
