footer component finished

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <img src="/src/assets/logos/circle.svg" alt="Circle">
                 </a>
             </div>
-            <p class="footer__street">2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
+            <p class="footer__street">2972 Westheimer Rd. Santa Ana,<br>Illinois 85486</p>
         </div>
         <div class="footer__links">
             <a href="#">Team</a>
