--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <p class="newsletter__text">Let us help you!</p>
         <form action="" class="newsletter__form">
             <input type="email" placeholder="Enter your email" required>
-            <button type="submit" class="btn btn--primary">Subscribe</button>
+            <button type="submit" id="newsletter__submit" class="btn btn--primary">Subscribe</button>
         </form>
     </section>
     <footer class="footer">
