create projects tempalte and fill it with Deta info from query

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="project-card__container">
                         <h3 class="project-card__title">Simplify</h3>
                         <p class="project-card__text">UI Design & App Development</p>
-                        <a href="/simplify.html" class="project-card__link">Learn more</a>
+                        <a href="/projects.html?project=t2jdfma29w2j" class="project-card__link">Learn more</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -72,7 +72,7 @@
                     <div class="project-card__container">
                         <h3 class="project-card__title">Dashcoin</h3>
                         <p class="project-card__text">Web Development</p>
-                        <a href="#" class="project-card__link">Learn more</a>
+                        <a href="/projects.html?project=rxnkftlbmx4z" class="project-card__link">Learn more</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -80,7 +80,7 @@
                     <div class="project-card__container">
                         <h3 class="project-card__title">Vectorify</h3>
                         <p class="project-card__text">User Experience Design</p>
-                        <a href="#" class="project-card__link">Learn more</a>
+                        <a href="/projects.html?project=0nweifg5965u" class="project-card__link">Learn more</a>
                     </div>
                 </div>
             </div>
