--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simplify - Circle</title>
+    <title>Projects - Circle</title>
     <link rel="icon" type="image/x-icon" href="/src/assets/logos/favicon.ico" />
     <link rel="stylesheet" href="/src/css/style.css"></link>
   </head>
@@ -35,14 +35,13 @@
     </div>
     <div class="container">
         <section class="landing">
-            <h1 class="landing__title">Simplify</h1>
+            <h1 class="landing__title"></h1>
             <div class="landing__info">
-                <p class="landing__info-title">UI Design & App Development</p>
-                <p class="landing__info-date">Completed on June 22, 2021</p>
+                <p class="landing__info-title"></p>
+                <p class="landing__info-date"></p>
             </div>
-            <img src="/src/assets/projects-section/1.jpg" alt="Simplify" class="landing__banner">
-            <p class="landing__text">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi. Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt quix duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.</p>
-            <p class="landing__text">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nis cillum minim tempor enim.</p>
+            <img src="" alt="Simplify" class="landing__banner">
+            <p class="landing__text"></p>
         </section>
         <section id="projects" class="projects">
             <h2>Other <span class="br-text">Projects</span></h2>
@@ -101,5 +100,6 @@
         </div>
     </footer>
     <script src="/src/js/script.js"></script>
+    <script src="/src/js/projects.js"></script>
   </body>
 </html>
