dynamic Other Projects section

--- a/projects.html
+++ b/projects.html
@@ -45,32 +45,7 @@
         </section>
         <section id="projects" class="projects">
             <h2>Other <span class="br-text">Projects</span></h2>
-            <div class="projects__container">
-                <div class="project-card">
-                    <img class="project-card__img" src="/src/assets/projects-section/1.jpg" alt="Simplify">
-                    <div class="project-card__container">
-                        <h3 class="project-card__title">Orbit</h3>
-                        <p class="project-card__text">UI Design</p>
-                        <a href="#" class="project-card__link">Learn more</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img class="project-card__img" src="/src/assets/projects-section/2.jpg" alt="Dashcoin">
-                    <div class="project-card__container">
-                        <h3 class="project-card__title">Purify</h3>
-                        <p class="project-card__text">UI/UX Design</p>
-                        <a href="#" class="project-card__link">Learn more</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img class="project-card__img" src="/src/assets/projects-section/3.jpg" alt="Vectorify">
-                    <div class="project-card__container">
-                        <h3 class="project-card__title">CryptoPie</h3>
-                        <p class="project-card__text">App Development</p>
-                        <a href="#" class="project-card__link">Learn more</a>
-                    </div>
-                </div>
-            </div>
+            <div class="projects__container"></div>
         </section>
     </div>
     <section class="newsletter">
