--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img src="/src/assets/logos/amazon-logo.svg" alt="Amazon">
         </section>
         <section id="projects" class="projects">
-            <h2>Recent <span class="br-text">Projects</span></h2>
+            <h2>Recent Projects</h2>
             <div class="projects__container">
                 <div class="project-card">
                     <img class="project-card__img" src="/src/assets/projects-section/1.jpg" alt="Simplify">
@@ -103,7 +103,7 @@
     </section>
     <div class="container">
         <section id="services" class="services">
-            <h2>Our <span class="br-text">Services</span></h2>
+            <h2>Our Services</h2>
             <div class="services__container">
                 <div class="service-card">
                     <div class="service-card__icon-block">
