--- a/projects.html
+++ b/projects.html
@@ -40,11 +40,11 @@
                 <p class="landing__info-title"></p>
                 <p class="landing__info-date"></p>
             </div>
-            <img src="" alt="Simplify" class="landing__banner">
+            <img src="" alt="" class="landing__banner">
             <p class="landing__text"></p>
         </section>
         <section id="projects" class="projects">
-            <h2>Other <span class="br-text">Projects</span></h2>
+            <h2>Other Projects</h2>
             <div class="projects__container"></div>
         </section>
     </div>
