--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,13 @@
             </div>
         </div>
     </div>
+    <div class="loader__container">
+        <div class="loader">
+            <div class="inner one"></div>
+            <div class="inner two"></div>
+            <div class="inner three"></div>
+        </div>
+    </div>
     <div class="container">
         <section class="landing">
             <h1 class="landing__title"></h1>
