adjust project card height

--- a/index.html
+++ b/index.html
@@ -62,24 +62,30 @@
                 <div class="project-card">
                     <img class="project-card__img" src="/src/assets/projects-section/1.jpg" alt="Simplify">
                     <div class="project-card__container">
-                        <h3 class="project-card__title">Simplify</h3>
-                        <p class="project-card__text">UI Design & App Development</p>
+                        <div class="project-card__container-top">
+                            <h3 class="project-card__title">Simplify</h3>
+                            <p class="project-card__text">UI Design & App Development</p>
+                        </div>
                         <a href="/projects.html?project=t2jdfma29w2j" class="project-card__link">Learn more</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <img class="project-card__img" src="/src/assets/projects-section/2.jpg" alt="Dashcoin">
                     <div class="project-card__container">
-                        <h3 class="project-card__title">Dashcoin</h3>
-                        <p class="project-card__text">Web Development</p>
+                        <div class="project-card__container-top">
+                            <h3 class="project-card__title">Dashcoin</h3>
+                            <p class="project-card__text">Web Development</p>
+                        </div>
                         <a href="/projects.html?project=rxnkftlbmx4z" class="project-card__link">Learn more</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <img class="project-card__img" src="/src/assets/projects-section/3.jpg" alt="Vectorify">
                     <div class="project-card__container">
-                        <h3 class="project-card__title">Vectorify</h3>
-                        <p class="project-card__text">User Experience Design</p>
+                        <div class="project-card__container-top">
+                            <h3 class="project-card__title">Vectorify</h3>
+                            <p class="project-card__text">User Experience Design</p>
+                        </div>
                         <a href="/projects.html?project=0nweifg5965u" class="project-card__link">Learn more</a>
                     </div>
                 </div>
