--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Circle - Empower Your Business With Stunning Design!</title>
     <link rel="icon" type="image/x-icon" href="/src/assets/logos/favicon.ico" />
     <link rel="stylesheet" href="/src/css/style.css"></link>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="loader__container">
@@ -86,7 +88,7 @@
     <div class="container">
         <section id="services" class="services">
             <h2>Our Services</h2>
-            <div class="services__container">
+            <div class="services__container add-carrousel-mobile">
                 <div class="service-card">
                     <div class="service-card__icon-block">
                         <img class="service-card__icon" src="/src/assets/services-section/icons/1.svg" alt="User Interface Design">
@@ -140,6 +142,8 @@
             <a href="#">Privacy Policy</a>
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.slim.min.js" integrity="sha512-yBpuflZmP5lwMzZ03hiCLzA94N0K2vgBtJgqQ2E1meJzmIBfjbb7k4Y23k2i2c/rIeSUGc7jojyIY5waK3ZxCQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/src/js/script.js"></script>
     <script src="/src/js/projects.js"></script>
   </body>
