add carrousel to recent projects home

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section>
         <section id="projects" class="projects">
             <h2>Recent Projects</h2>
-            <div id="recent-projects" class="projects__container"></div>
+            <div id="recent-projects" class="projects__container add-carrousel"></div>
         </section>
     </div>
     <section class="testimonial">
